# Prospera

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: README.md  api-reference.md  architecture.md  overview.md  setup.md  tech-stack.md
scripts/: scope_probe.py
src/: test.py  verify_me.py
src/verify_me/: __init__.py  __main__.py  api.py  app.py  config.py  profile.py
src/verify_me/ui/: __init__.py  components.py  data.py
tests/: test_api.py  test_profile.py
